--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horiseon SEO</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./Develop/assets/css/style.css">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
 
           <!-- "Search Engine Optimization section -->
         <div class="search-engine-optimization"> 
-          <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization" class="float-left" />
+          <img src="./Develop/assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
                 <p>
                   The dominance of mobile internet use means that users are searching for the right business as they travel, shop,
@@ -51,7 +51,7 @@
 
           <!-- online-reputation-management sectoin -->
         <div id="online-reputation-management" class="online-reputation-management">
-          <img src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Management" class="float-right"/>
+          <img src="./Develop/assets/images/online-reputation-management.jpg" alt="Online Reputation Management" class="float-right"/>
             <h2>Online Reputation Management</h2>
          <p>
           The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. 
@@ -61,7 +61,7 @@
 
         <!-- social-media-marketing section -->
         <div id="social-media-marketing" class="social-media-marketing">
-          <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing" class="float-left" />
+          <img src="./Develop/assets/images/social-media-marketing.jpg" alt="Social Media Marketing" class="float-left" />
          <h2>Social Media Marketing</h2>
            <p>
             Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, 
@@ -75,7 +75,7 @@
 
           <section class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="Lead Generation"/>
+            <img src="./Develop/assets/images/lead-generation.png" alt="Lead Generation"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.</p>
             </section>
@@ -83,7 +83,7 @@
             <!-- benefit brand section -->
           <section class="benefit-brand" >
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness"/>
+            <img src="./Develop/assets/images/brand-awareness.png" alt="Brand Awareness"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -92,7 +92,7 @@
           <!-- benefit cost section -->
           <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="Cost Management"/>
+            <img src="./Develop/assets/images/cost-management.png" alt="Cost Management"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
